dump.txt
translation-workflow> build (lib + exe)
Preprocessing library for translation-workflow-0.1.0.0..
Building library for translation-workflow-0.1.0.0..
[3 of 6] Compiling TransAPIs [Source file changed]

/Users/franklindyer/Documents/dev/haskell-translator/src/TransAPIs.hs:16:17: error: [GHC-83865]
    • Couldn't match type: [Char]
                     with: (Key, Value)
      Expected: aeson-2.1.2.1:Data.Aeson.Types.Internal.Pair
        Actual: String
    • In the expression: "source" .= "auto" :: String
      In the first argument of ‘object’, namely
        ‘["source" .= "auto" :: String, "target" .= "de" :: String,
          "q" .= "Call me Ishmael. Some years ago..." :: String]’
      In the expression:
        object
          ["source" .= "auto" :: String, "target" .= "de" :: String,
           "q" .= "Call me Ishmael. Some years ago..." :: String]
   |
16 |                 "source" .= "auto" :: String,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/Users/franklindyer/Documents/dev/haskell-translator/src/TransAPIs.hs:17:17: error: [GHC-83865]
    • Couldn't match type: [Char]
                     with: (Key, Value)
      Expected: aeson-2.1.2.1:Data.Aeson.Types.Internal.Pair
        Actual: String
    • In the expression: "target" .= "de" :: String
      In the first argument of ‘object’, namely
        ‘["source" .= "auto" :: String, "target" .= "de" :: String,
          "q" .= "Call me Ishmael. Some years ago..." :: String]’
      In the expression:
        object
          ["source" .= "auto" :: String, "target" .= "de" :: String,
           "q" .= "Call me Ishmael. Some years ago..." :: String]
   |
17 |                 "target" .= "de" :: String,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^

/Users/franklindyer/Documents/dev/haskell-translator/src/TransAPIs.hs:18:17: error: [GHC-83865]
    • Couldn't match type: [Char]
                     with: (Key, Value)
      Expected: aeson-2.1.2.1:Data.Aeson.Types.Internal.Pair
        Actual: String
    • In the expression:
          "q" .= "Call me Ishmael. Some years ago..." :: String
      In the first argument of ‘object’, namely
        ‘["source" .= "auto" :: String, "target" .= "de" :: String,
          "q" .= "Call me Ishmael. Some years ago..." :: String]’
      In the expression:
        object
          ["source" .= "auto" :: String, "target" .= "de" :: String,
           "q" .= "Call me Ishmael. Some years ago..." :: String]
   |
18 |                 "q" .= "Call me Ishmael. Some years ago..." :: String
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package translation-workflow-0.1.0.0 (scroll up to its section to see the error)
       using:
       /Users/franklindyer/.stack/setup-exe-cache/aarch64-osx/Cabal-simple_6HauvNHV_3.10.1.0_ghc-9.6.4 --verbose=1 --builddir=.stack-work/dist/aarch64-osx/ghc-9.6.4 build lib:translation-workflow exe:translation-workflow-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
